fix(section-form): hid the native calendar indicator + adjusted the grid for correct stretching

--- a/assets/sass/_templates.scss
+++ b/assets/sass/_templates.scss
@@ -8,7 +8,7 @@
   padding: 0;
   box-sizing: inherit;
 
-  outline: palevioletred solid 1px;
+  //outline: palevioletred solid 1px;
 }
 
 html {
